// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TouchableItem with children throws error for multiple children 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  borderlessRipple={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <Text>
    this is OK
  </Text>
</TouchableOpacity>
`;

exports[`TouchableItem with children throws error for multiple children 2`] = `
<TouchableOpacity
  activeOpacity={0.5}
  borderlessRipple={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <View>
    <Text>
      line 1
    </Text>
    <Text>
      line 2
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`TouchableItem with children throws error for multiple children 3`] = `"React.Children.only expected to receive a single React element child."`;
